Fixed weird spacing buisness with the task doers.

--- a/app/assets/stylesheets/widgets/_task_metadata.sass
+++ b/app/assets/stylesheets/widgets/_task_metadata.sass
@@ -2,8 +2,11 @@
   padding-left: 20px
   padding-right: 20px
 
-  .avatar > .name
-    font-size: 0px
+  .avatar
+    margin-left: 2px
+    margin-right: 2px
+    > .name
+      font-size: 0px
 
   .task-controls
     margin-left: 28px
